# 67315-Programming-workshop-in-C-and-C-

CPP_Ex1/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h
CPP_Ex2/: CMakeLists.txt  Fractal.cpp  Fractal.h  FractalDrawer.cpp  MakeList.txt  Makefile
CPP_Ex3/: CMakeLists.txt  HashMap.hpp  SpamDetector.cpp
C_Ex1/: CMakeLists.txt  manageStudents.c
C_Ex1/Aviv_Tests/: 1.in  1.out  12.in  12.out  13.in  17.in  17.out  2.in  2.out
C_Ex2/: CMakeLists.txt  TreeAnalyzer.c  c_ex2
C_Ex3/: CMakeLists.txt  RBTree.c  Structs.c
